--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GitamWeb"></activity>
+        <activity android:name=".ClubMember"></activity>
+        <activity android:name=".RejectedApplication" />
+        <activity android:name=".PendingReview" />
+        <activity android:name=".NotApplied" />
+        <activity android:name=".GitamWeb" />
         <activity android:name=".WebDevelopment" />
         <activity android:name=".DepartmentActivity" />
         <activity android:name=".MainActivity">
